Fixed the UI Sortable bug, that caused items to jump while sorting. Affects the new navigation and Portfolio section.
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@12957 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@
   audio:not([controls]) { display: none; }
   [hidden] { display: none; }
 
-  html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+  html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
   body { margin: 0; font-size: 13px; line-height: 1.231; }
   body, button, input, select, textarea { font-family: sans-serif; }
 
